--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,6 +5,10 @@ spring:
     hikari:
       maximum-pool-size: 20
       minimum-idle: 10
+  mvc:
+    throw-exception-if-no-handler-found: true
+  resources:
+    add-mappings: false
 
   jackson:
     property-naming-strategy: SNAKE_CASE
