add humidity history receiver

--- a/src/main/resources/application-development.yaml
+++ b/src/main/resources/application-development.yaml
@@ -23,3 +23,5 @@ aws:
     max-number-of-messages: 10
     queues:
       test-url: https://sqs.ap-northeast-1.amazonaws.com/417172458195/Test
+      watering-history:
+      humidity-history: https://sqs.ap-northeast-1.amazonaws.com/417172458195/watering_develop_humidity_histories
