--- a/src/main/resources/application-production.yaml
+++ b/src/main/resources/application-production.yaml
@@ -18,3 +18,10 @@ aws:
     jwt:
       public-key: /production/jwt/public_key
       private-key: /production/jwt/private_key
+  sqs:
+    wait-time-seconds: 20
+    max-number-of-messages: 10
+    queues:
+      watering-history: https://sqs.ap-northeast-1.amazonaws.com/417172458195/watering_production_watering_histories
+      temperature-history: https://sqs.ap-northeast-1.amazonaws.com/417172458195/watering_production_temperature_histories
+      humidity-history: https://sqs.ap-northeast-1.amazonaws.com/417172458195/watering_production_humidity_histories
